syntax = "proto3";

package auth.v1.cache;

option go_package = "erp.localhost/internal/infra/model/auth/v1/cache;authcache";

import "google/protobuf/timestamp.proto";
import "tagger/tagger.proto";

// =============================================================================
// Redis Cache Models (for token caching)
// =============================================================================

// TokenMetadata represents token metadata stored in Redis
message TokenMetadata {
  string jti = 1 [(tagger.tags) = "json:\"jti\""];
  string user_id = 2 [(tagger.tags) = "json:\"user_id\""];
  string tenant_id = 3 [(tagger.tags) = "json:\"tenant_id\""];
  google.protobuf.Timestamp issued_at = 4 [(tagger.tags) = "json:\"issued_at\""];
  google.protobuf.Timestamp expires_at = 5 [(tagger.tags) = "json:\"expires_at\""];
  bool revoked = 6 [(tagger.tags) = "json:\"revoked\""];
  google.protobuf.Timestamp revoked_at = 7 [(tagger.tags) = "json:\"revoked_at,omitempty\""];
  string revoked_by = 8 [(tagger.tags) = "json:\"revoked_by,omitempty\""];
  string ip_address = 9 [(tagger.tags) = "json:\"ip_address\""];
  string user_agent = 10 [(tagger.tags) = "json:\"user_agent\""];
  repeated string scopes = 11 [(tagger.tags) = "json:\"scopes,omitempty\""];
}
